Lab 6 - śnieżna kula

--- a/.gitignore
+++ b/.gitignore
@@ -390,3 +390,6 @@ MigrationBackup/
 .ionide/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,c++
+
+# Web page
+/node_modules
